--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,20 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<p>app works</p>
+<!-- src/app/app.component.html -->
+<div class="layout-overflow">
+  <div
+    class="layout-canvas"
+    [ngClass]="{'nav-open': navOpen, 'nav-closed': !navOpen}"
+    [style.min-height]="minHeight">
 
-<router-outlet></router-outlet>
+    <!-- HEADER -->
+    <app-header (navToggled)="navToggledHandler($event)"></app-header>
+
+    <!-- CONTENT -->
+    <div id="layout-view" class="layout-view">
+      <router-outlet></router-outlet>
+    </div>
+
+    <!-- FOOTER -->
+    <app-footer></app-footer>
+
+  </div> <!-- /.layout-canvas -->
+</div> <!-- /.layout-overflow -->
