--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,6 +6,13 @@
     </h1>
   </div>
 
+  <div class="header-page-authStatus">
+      <a *ngIf="!auth.loggedIn" (click)="auth.login()">Log In</a>
+      <span *ngIf="auth.loggedIn">
+        {{auth.userProfile?.name}} <span class="opacity-half">|</span> <a (click)="auth.logout()">Log Out</a>
+      </span>
+  </div>
+
   <nav id="nav" class="nav" role="navigation">
     <ul class="nav-list">
       <li>
